# Effective-Mobile-task

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
order_app/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
order_app/item/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
order_app/item/migrations/: 0001_initial.py
order_app/item/templates/item/: item_create.html  items.html
order_app/order/: admin.py  filters.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
order_app/order/migrations/: 0001_initial.py  0002_alter_orderitem_order.py  0003_alter_orderitem_order.py
order_app/order/templates/order/: base.html  order_create.html  order_delete.html  order_detail.html  order_update.html  orders.html  total_revenue.html
